--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "dotenv": "^16.3.1",
     "prisma": "^5.6.0"
   }
