--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,21 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "This is backend",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "cors": "^2.8.5",
-    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.0.1",
     "prisma": "^5.6.0"
   }
 }
